--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="product-list">
           <a href="#" class="product-item">
             <div class="image-container">
-              <img src="resources/img/home/yellow-chair.jpg">
+              <img src="resources/img/home/yellow-chair.jpg" alt="yellow metal chair">
             </div>
             <div class="description">
               <h3>Yellow Chair</h3>
@@ -87,7 +87,7 @@
           </a>
           <a href="#" class="product-item">
             <div class="image-container">
-              <img src="resources/img/home/round-table.jpg">
+              <img src="resources/img/home/round-table.jpg" alt="white molded plastic round table">
             </div>
             <div class="description">
               <h3>Round Table</h3>
@@ -96,7 +96,7 @@
           </a>
           <a href="#" class="product-item">
             <div class="image-container">
-              <img src="resources/img/home/white-chair.jpg">
+              <img src="resources/img/home/white-chair.jpg" alt="white plastic molded chair with wooden legs">
             </div>
             <div class="description">
               <h3>White Chair</h3>
@@ -105,7 +105,7 @@
           </a>
           <a href="#" class="product-item">
             <div class="image-container">
-              <img src="resources/img/home/desk-lamp.jpg">
+              <img src="resources/img/home/desk-lamp.jpg" alt="white painted metal anglepoise lamp">
             </div>
             <div class="description">
               <h3>Desk Lamp</h3>
