--- a/chairs.html
+++ b/chairs.html
@@ -77,7 +77,7 @@
 
         <a href="#" class="product-item">
           <div class="image-container">
-            <img src="resources/img/chairs/white-chair.jpg" alt="moulded white plastic chair with wooden legs">
+            <img src="resources/img/chairs/white-chair.jpg" alt="molded white plastic chair with wooden legs">
           </div>
           <div class="description">
             <h3>White Chair</h3>
